Add ML prediction API and training scripts
Introduces a new /predict endpoint in the backend to serve ML predictions by running a Python script. Adds the ml_service module with configuration, training, and prediction scripts, as well as pre-trained model files. Also implements /current and /history endpoints for real-time and historical sensor data, and updates package.json with a retrain-model script.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
   "main": "server.js",
   "scripts": {
-    "start": "node server.js"
+    "start": "node server.js",
+    "retrain-model": "./venv/bin/python3 -m ml_service.train_and_save"
   },
   "dependencies": {
     "body-parser": "^2.2.1",
