--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,15 @@
 .env
 
+# Docker
+Dockerfile
+.dockerignore
+
+# Python
+venv/
+__pycache__/
+*.pyc
+*.joblib
+
 # Node.js
 node_modules/
 npm-debug.log
