Add WiFi setup portal and refactor ESP code
Introduces a captive portal for WiFi configuration using WebServer, DNSServer, and Preferences on the ESP. Removes hardcoded WiFi credentials, adds AP mode for setup, and refactors network connection logic. Also updates the server endpoint to a single URL and improves sensor warm-up and display routines. Dependency updates in package.json and lock files add support for influxdb3-client and related packages.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "@influxdata/influxdb3-client": "^1.4.0",
     "body-parser": "^2.2.1",
     "cors": "^2.8.5",
     "express": "^5.1.0",
